--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <h3 class="hidden">Interaction</h3>
       <p class="interaction__title">Set letters for printing<br>Plantin’s name</p>
       <button class="hint__button">Hint</button>
-      <p class="hint">Letters used to be set upside down and mirror view.</p>
+      <p class="hint hidden">Letters used to be set upside down and mirror view.</p>
       <div class="positioning">
         <dialog id="choiceDialog" class="congrats__msg">
           <div class="popup__content">
@@ -284,7 +284,7 @@
       <h3 class="hidden">Interaction</h3>
       <p class="interaction__title">Guess in how many languages Polyglot bible was written?</p>
       <button class="hint__button">Hint</button>
-      <p class="hint">One digit</p>
+      <p class="hint hidden">One digit</p>
       <form class="languages" id="numberForm">
         <label for="singleDigit"></label>
         <input type="number" id="singleDigit" name="singleDigit" min="1" max="9" required>
@@ -322,7 +322,7 @@
       <h3 class="hidden">Interaction</h3>
       <p class="interaction__title">Choose which ones would be those consequences</p>
       <button class="hint__button">Hint</button>
-      <p class="hint">There are only 3 right options</p>
+      <p class="hint hidden">There are only 3 right options</p>
       <div class="choices">
         <div class="consequences__choice">
           <picture>
