dice interaction (desktop)

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         finding ways to print forbidden books</p>
       <p class="dangerous gold centered">Playing a Dangerous Double Game.</p>
     </section>
-    <section class="interaction">
+    <section class="interaction dice__inter">
       <div class="top__corner">
         <img src="./src/assets/svg/left-top-corner.svg" alt="corner decoration" width="35%">
       </div>
@@ -422,7 +422,7 @@
         <img src="./src/assets/svg/dice-dots-2.svg" alt="Dice with 2 dots" width="40%">
         <img src="./src/assets/svg/dice-dots-5.svg" alt="Dice with 5 dots" width="40%">
       </div>
-      <p class="explanation">Double number: You would! <br>
+      <p class="explanation">Doubles: You would! <br>
         Non-doubles: You wouldn’t!
       </p>
       <div class="bottom__corner">
