finish dice interaction

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
       </div>
       <h3 class="hidden">Interaction</h3>
       <p class="interaction__title">Would you be able to get away with illegal printing and distribution?</p>
-      <p class="instructions">Shake your phone to roll the dice</p>
+      <p class="instructions dice__instru"></p>
       <div class="dices">
         <img src="./src/assets/svg/dice-dots-2.svg" alt="Dice with 2 dots" width="40%">
         <img src="./src/assets/svg/dice-dots-5.svg" alt="Dice with 5 dots" width="40%">
