fixing dice interaction

--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@
       <p class="interaction__title">Would you be able to get away with illegal printing and distribution?</p>
       <p class="instructions dice__instru"></p>
       <div class="dices">
-        <img src="./src/assets/svg/dice-dots-2.svg" alt="Dice with 2 dots" width="40%">
-        <img src="./src/assets/svg/dice-dots-5.svg" alt="Dice with 5 dots" width="40%">
+        <img src="./src/assets/svg/dice-dots-2.svg" type="image/svg+xml" alt="Dice with 2 dots" width="40%">
+        <img src="./src/assets/svg/dice-dots-5.svg" type="image/svg+xml" alt="Dice with 5 dots" width="40%">
       </div>
       <p class="explanation">Doubles: You would! <br>
         Non-doubles: You wouldn’t!
@@ -488,7 +488,8 @@
         this, Plantin <strong>saw an opportunity</strong> and printed
         astrological books and calendars. These publications were <strong>highly profitable</strong>, but they also put
         him at risk with
-        religious authorities.</p>
+        religious authorities.
+      </p>
       <p class="bckgrnd divine__will centered gold">The Church believed astrology interfered with faith and divine will,
       </p>
       <p class="bckgrnd star__para__two">many religious leaders accused astrologers and their publishers of
