--- a/index.html
+++ b/index.html
@@ -402,6 +402,8 @@
           <p>Prison</p>
         </div>
       </div>
+      <button class="check hidden">Check!</button>
+      <p class="feedback"></p>
       <div class="bottom__corner">
         <img src="./src/assets/svg/right-bot-corner.png" alt="corner decoration" width="100">
       </div>
